--- a/index.html
+++ b/index.html
@@ -63,5 +63,9 @@
       </div>
   </div>
   </main>
+  <footer class="text-center mt-lg-5">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/jsngmb" target="_blank">Jason Gamba</a>.</p>
+   </footer>
 </body>
 </html>
